Now compiles and is computing everything except gbdrift and cvdrift

--- a/doc/gs2_full_surface_stellarator_geometry.tex
+++ b/doc/gs2_full_surface_stellarator_geometry.tex
@@ -262,6 +262,7 @@ and
 + \left( -\iota + \frac{\partial\Lambda}{\partial\zeta}\right) \nabla\zeta.
 \label{eq:grad_alpha}
 \end{align}
+\todo{Do we want to include a shift to zeta so the secular $\zeta$ term in $\nabla\alpha$ vanishes at particular a particular place?}
 Now that Cartesian components of $\nabla\psi$ and $\nabla \alpha$ are known, $\gdstwo$, $\gdstwoone$, and $\gdstwotwo$ can be computed. 
 
 To evaluate $\gbdriftO = \cvdriftO$, we can use
