Fixed a couple of bugs

--- a/doc/gs2_full_surface_stellarator_geometry.tex
+++ b/doc/gs2_full_surface_stellarator_geometry.tex
@@ -308,7 +308,7 @@ B_s \frac{\partial B}{\partial \theta_v} \left(\frac{\partial \Lambda}{\partial\
 + B_\theta \frac{\partial B}{\partial\zeta} \left( \frac{\partial\Lambda}{\partial s} - \zeta \frac{d\iota}{ds}\right)
 + B_\zeta \frac{\partial B}{\partial s} \left( 1 + \frac{\partial \Lambda}{\partial \theta_v}\right) \right. \nonumber \\
 &\left.-B_\zeta \frac{\partial B}{\partial\theta_v} \left( \frac{\partial\Lambda}{\partial s} - \zeta \frac{d\iota}{ds}\right)
--B_\theta \frac{\partial B}{\partial\zeta} \left( \frac{\partial \Lambda}{\partial\zeta}-\iota\right)
+-B_\theta \frac{\partial B}{\partial s} \left( \frac{\partial \Lambda}{\partial\zeta}-\iota\right)
 -B_s \frac{\partial B}{\partial\zeta} \left( 1 + \frac{\partial\Lambda}{\partial\theta_v}\right)
 \right].
 \end{align}
